script to extract protein domain annotations for a list of gene ids

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "homepage": "https://github.com/warelab/gramene-search-scripts#readme",
   "dependencies": {
     "byline": "^4.2.1",
+    "gramene-gene-positions": "^2.0.2",
     "gramene-search-client": "^2.6.3",
+    "lodash": "^4.17.4",
     "minimist": "^1.2.0",
     "through2": "^2.0.1"
   }
