--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "byline": "^4.2.1",
     "gramene-gene-positions": "^2.0.2",
-    "gramene-search-client": "^2.6.3",
+    "gramene-search-client": "^3.0.4",
+    "gramene-trees-client": "^2.5.3",
     "lodash": "^4.17.4",
     "minimist": "^1.2.0",
     "through2": "^2.0.1"
