--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "dependencies": {
     "byline": "^4.2.1",
     "gramene-gene-positions": "^2.0.2",
-    "gramene-search-client": "^3.0.4",
+    "gramene-search-client": "^3.1.3",
     "gramene-trees-client": "^2.5.3",
     "lodash": "^4.17.4",
     "minimist": "^1.2.0",
+    "n-readlines": "^1.0.1",
+    "node-fetch": "^2.6.6",
     "through2": "^2.0.1"
   }
 }
